Fixed contrast in fonts for posts

--- a/assets/less/_global.less
+++ b/assets/less/_global.less
@@ -1,6 +1,6 @@
 /*==========  ESTILOS GLOBALES  ==========*/
 body { 
-  font-weight: 300; 
+  font-weight: 400; 
 }
 html, 
 body { 
